# Bach

./: .gitignore  Bach.sublime-project  CMakeLists.txt  README.md  README.txt
Bach/: CMakeLists.txt  Makefile
Bach/geom/: Misalign_geom.xml  Telescope_geom.xml
Bach/scripts/: MakeMisalign.py  Makefile  UpdateMakefile.py  generateClass.py
Bach/src/: AlignmentExampleObjects.cpp  AlignmentExampleObjects.h  Telescope_geo.cpp  bach.cpp
Bach/xml/: Configuration.xml
Millepede/: CMakeLists.txt
Millepede/include/: Millepede.h
Millepede/src/: Millepede.cpp
TbAlgorithms/: CMakeLists.txt
TbAlgorithms/include/: TbAlignment.h  TbClustering.h  TbDecoder.h  TbPatternRecognition.h  TbPlotTool.h  TbToyData.h  TbTrackAlgorithms.h
TbAlgorithms/src/: TbAlignment.cpp  TbAlignment.h  TbClustering.cpp  TbClustering.h  TbDecoder.cpp  TbDecoder.h  TbPatternRecognition.cpp  TbPatternRecognition.h  TbPlotTool.cpp  TbPlotTool.h  TbToyData.cpp  TbToyData.h  TbTrackAlgorithms.cpp  TbTrackAlgorithms.h
TbKernel/: CMakeLists.txt
TbKernel/TbKernel/: ITbGeometrySvc.h
TbKernel/include/: TbBaseClass.h  TbClipboard.h  TbCluster.h  TbGeometrySvc.h  TbHit.h  TbModule.h  TbROOT.h  TbTrack.h
TbKernel/src/: TbBaseClass.h  TbClipboard.h  TbCluster.h  TbGeometrySvc.cpp  TbGeometrySvc.h  TbHit.h  TbModule.h  TbROOT.h  TbTrack.h
example/: .gitignore  AlignToyData.xml  Configuration.xml  GenerateToy.xml  Modules_run-1000...2000.xml  Telescope.xml  performance.ipynb  repository-misalign.xml  run_example.py
example/geom/: Geom_output_expected.xml  Misalign_geom.xml  Telescope_geom.xml  Telescope_misal.xml
(+9 files in other folders)
